--- a/style.css
+++ b/style.css
@@ -57,8 +57,11 @@ body {
 }
 
 .display_text {
+    font-size: 24px;
+    text-align: center;
+    padding: 30px;
     width: 500px;
-    height: 300px;
+    min-height: 95px;
     border: 1px solid #fff;
 }
 
